--- a/templates/view.html
+++ b/templates/view.html
@@ -6,12 +6,21 @@
 	<p>
 		<b>Team:</b> {{ row['team'] }}<br>
 		<b>Program:</b> {{ row['problem'] }}<br>
-		<b>Submitted</b> at {{ row['time'] }}<br>
+		{% if row['resub'] %}
+		<b><span style='color:red;'>Resubmitted</span></b>
+		{% else %}
+		<b>Submitted</b>
+		{% endif %}
+		 at {{ row['time'] }}<br>
+		<b>Architects:</b> {{ row['arch'] }}<br>
 	</p>
 	<br>
-	Select all and then copy:
+	Select all and then copy:<br>
+	<textarea rows='4' cols='40'>{{ row['code'] }}</textarea><br>
+	Or just look here:
+	<hr>
 	<pre>
-<textarea>{{ row['code'] }}</textarea>
+{{ row['code'] }}
 	</pre>
 </body>
 </html>
